# indexlake

./: .gitignore  Cargo.toml  README.md  tmpclaude-1fac-cwd
.github/workflows/: benchmarks.yml  ci.yml
benchmarks/: Cargo.toml
benchmarks/src/: data.rs  lib.rs
catalogs/postgres/: Cargo.toml
catalogs/postgres/src/: builder.rs  catalog.rs  lib.rs  types.rs
catalogs/sqlite/: Cargo.toml
catalogs/sqlite/src/: catalog.rs  lib.rs  types.rs
docs/: index-search-dynamic-columns.md
examples/: Cargo.toml
examples/examples/: basic_crud.rs
indexes/bm25/: Cargo.toml
indexes/bm25/src/: builder.rs  index.rs  kind.rs  scorer.rs  tokenizer.rs
indexes/btree/: Cargo.toml
indexes/btree/src/: builder.rs  index.rs  kind.rs
indexes/hnsw/: Cargo.toml
indexes/hnsw/src/: builder.rs  index.rs  kind.rs  lib.rs
indexes/rabitq/: Cargo.toml
indexes/rabitq/src/: builder.rs  index.rs  kind.rs  lib.rs
indexes/rabitq/src/rabitq/: brute_force.rs  fastscan.rs  fastscan_kernel.rs  math.rs  mod.rs  quantizer.rs  rotation.rs  simd.rs
indexes/rstar/: Cargo.toml
indexes/rstar/src/: builder.rs  index.rs  kind.rs
indexlake/: Cargo.toml
indexlake/examples/: basic_crud.rs
indexlake/src/: client.rs  error.rs  utils.rs
indexlake/src/catalog/: database.rs  mod.rs  record.rs  row.rs  scalar.rs  schema.rs
indexlake/src/catalog/helper/: create.rs  delete.rs  insert.rs  mod.rs  query.rs  update.rs
indexlake/src/expr/: binary.rs  builder.rs  case.rs  compute.rs  like.rs  mod.rs  text.rs  visitor.rs
indexlake/src/index/: definition.rs  manager.rs  mod.rs
indexlake/src/storage/: fs.rs  lance.rs  mod.rs  parquet.rs  s3.rs
indexlake/src/table/: alter.rs  create.rs  delete.rs  dump.rs  insert.rs  mod.rs  optimize.rs  scan.rs  search.rs  update.rs
integration-tests/: Cargo.toml
integration-tests/src/: data.rs  docker.rs  lib.rs  utils.rs
integration-tests/testdata/postgres/: init_catalog.sql
integration-tests/testdata/sqlite/: init_catalog.sql
integration-tests/tests/: datafusion.rs  index_bm25.rs  index_btree.rs  index_hnsw.rs  index_rabitq.rs  index_rstar.rs  namespace.rs  storage.rs  table_alter.rs  table_delete.rs  table_index.rs  table_insert.rs  table_ops.rs  table_optimize.rs  table_scan.rs  table_update.rs
integrations/datafusion/: Cargo.toml
integrations/datafusion/src/: codec.rs  delete.rs  expr.rs  insert.rs  lazy_table.rs  lib.rs  protobuf.rs  scan.rs  search.rs  table.rs  update.rs
storages/fs/: Cargo.toml
storages/fs/src/: file.rs  lib.rs  storage.rs
storages/s3/: Cargo.toml
storages/s3/src/: file.rs  lib.rs  storage.rs
