[workspace]
members = [
  "benchmarks",
  "catalogs/postgres",
  "catalogs/sqlite",
  "examples",
  "indexes/bm25",
  "indexes/btree",
  "indexes/hnsw",
  "indexes/rstar",
  "indexes/rabitq",
  "indexlake",
  "integration-tests",
  "integrations/datafusion",
  "integrations/datafusion/gen",
  "storages/fs",
  "storages/s3",
]
resolver = "3"

[workspace.package]
version = "0.4.0"
edition = "2024"
homepage = "https://github.com/systemxlabs/indexlake"
license = "MIT"
repository = "https://github.com/systemxlabs/indexlake"
rust-version = "1.89.0"

[workspace.dependencies]
indexlake = { path = "indexlake", version = "0.4.0" }
indexlake-catalog-postgres = { path = "catalogs/postgres", version = "0.4.0" }
indexlake-catalog-sqlite = { path = "catalogs/sqlite", version = "0.4.0" }
indexlake-datafusion = { path = "integrations/datafusion", version = "0.4.0" }
indexlake-index-bm25 = { path = "indexes/bm25", version = "0.4.0" }
indexlake-index-btree = { path = "indexes/btree", version = "0.4.0" }
indexlake-index-hnsw = { path = "indexes/hnsw", version = "0.4.0" }
indexlake-index-rabitq = { path = "indexes/rabitq", version = "0.4.0" }
indexlake-index-rstar = { path = "indexes/rstar", version = "0.4.0" }
indexlake-integration-tests = { path = "integration-tests", version = "0.4.0" }
indexlake-storage-fs = { path = "storages/fs", version = "0.4.0" }
indexlake-storage-s3 = { path = "storages/s3", version = "0.4.0" }

arrow = "58"
arrow-schema = "58"
async-trait = "0.1"
bb8 = "0.9"
bb8-postgres = "0.9"
bm25 = "2.3"
bytes = "1"
comfy-table = "7.2"
crc32fast = "1.5"
datafusion = { version = "53", default-features = false, features = ["sql"] }
datafusion-catalog = "53"
datafusion-common = "53"
datafusion-execution = "53"
datafusion-expr = "53"
datafusion-optimizer = "53"
datafusion-physical-expr = "53"
datafusion-physical-plan = "53"
datafusion-proto = "53"
derive-visitor = "0.4"
derive-with = "0.7"
env_logger = "0.11"
futures = "0.3"
geo = "0.32"
geozero = "0.15"
hex = "0.4"
hnsw = "0.11"
jieba-rs = "0.8"
log = "0.4"
opendal = "0.55"
parquet = "58"
postcard = { version = "1.1", default-features = false, features = ["use-std"] }
prost = "0.14"
prost-build = "0.14"
rand = "0.10"
rand_distr = "0.6"
rand_pcg = "0.10"
rayon = "1.11"
roaring = "0.11"
rstar = "0.12"
rstest = "0.26"
rusqlite = "0.39"
serde = "1.0"
serde_json = "1.0"
simsimd = "6.5"
space = "0.17"
thiserror = "2.0"
tokio = "1"
tokio-stream = "0.1"
uuid = { version = "1", features = ["serde"] }
