[package]
name = "indexlake-benchmarks"
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
indexlake = { workspace = true }
indexlake-index-bm25 = { workspace = true }
indexlake-index-btree = { workspace = true }
indexlake-index-hnsw = { workspace = true }
indexlake-integration-tests = { workspace = true }

arrow = { workspace = true }
futures = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true, features = ["full"] }
uuid = { workspace = true, features = ["v4"] }