[package]
name = "indexlake-benchmarks"
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
indexlake = { workspace = true }
indexlake-index-bm25 = { workspace = true }
indexlake-index-btree = { workspace = true }
indexlake-index-hnsw = { workspace = true }
indexlake-index-rabitq = { workspace = true }
indexlake-index-rstar = { workspace = true }
indexlake-integration-tests = { workspace = true }

arrow = { workspace = true }
datafusion = { workspace = true, features = ["parquet"] }
futures = { workspace = true }
geo = { workspace = true }
geozero = { workspace = true }
object_store = { workspace = true, features = ["aws"] }
opendal = { workspace = true }
rand = { workspace = true }
url = "2"
tokio = { workspace = true, features = ["full"] }
uuid = { workspace = true, features = ["v4"] }

[lib]
test = false
doctest = false
