[package]
name = "indexlake"
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "An experimental table format with extensible index support."

[dependencies]
arrow = { workspace = true }
arrow-schema = { workspace = true, features = ["serde"] }
async-stream = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
comfy-table = { workspace = true }
derive-visitor = { workspace = true, features = ["std-types-drive"] }
derive-with = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
num_cpus = { workspace = true }
parquet = { workspace = true, features = ["async"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
uuid = { workspace = true, features = ["v4", "v7"] }
