[package]
name = "indexlake-datafusion"
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "IndexLake datafusion integration"

[dependencies]
indexlake = { workspace = true }

# Core DataFusion components (instead of full datafusion crate)
arrow = { workspace = true }
datafusion = { workspace = true }
datafusion-catalog = { workspace = true }
datafusion-common = { workspace = true }
datafusion-datasource = { workspace = true }
datafusion-execution = { workspace = true }
datafusion-expr = { workspace = true }
datafusion-optimizer = { workspace = true }
datafusion-physical-expr = { workspace = true }
datafusion-physical-plan = { workspace = true }
datafusion-proto = { workspace = true }

# Other dependencies
async-trait = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
num_cpus = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
