[package]
name = "indexlake-storage-s3"
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "IndexLake s3 storage"

[dependencies]
indexlake = { workspace = true }

async-trait = { workspace = true }
bytes = { workspace = true }
opendal = { workspace = true, features = ["services-s3"] }